debug redirect_uri

--- a/config/oauth2.yml
+++ b/config/oauth2.yml
@@ -48,4 +48,4 @@ rspec_client:
 php_test_client:
   client_id: dvdpost_php_development_client
   client_secret: dvdpost_php_development_client_secret
-  redirect_uri: http://localhost
+  redirect_uri: http://test
