--- a/config/oauth2.yml
+++ b/config/oauth2.yml
@@ -35,6 +35,10 @@ rails_development_client:
   client_id: dvdpost_rails_development_client
   client_secret: dvdpost_rails_development_client_secret
   redirect_uri: http://dvdpost.dev/locale/callback
+mobile_development_client:
+  client_id: dvdpost_rails_development_client
+  client_secret: dvdpost_rails_development_client_secret
+  redirect_uri: http://m.dvdpost.dev/locale/callback
 rails_staging_client:
   client_id: dvdpost_rails_staging_client
   client_secret: dvdpost_rails_staging_client_secret
@@ -43,6 +47,10 @@ rails_iphone_staging_client:
   client_id: dvdpost_rails_staging_client
   client_secret: dvdpost_rails_staging_client_secret
   redirect_uri: http://staging.iphone.dvdpost.be/locale/callback
+rails_mobile_staging_client:
+  client_id: dvdpost_rails_staging_client
+  client_secret: dvdpost_rails_staging_client_secret
+  redirect_uri: http://staging.mobile.dvdpost.be/locale/callback
 php_development_client:
   client_id: dvdpost_php_development_client
   client_secret: dvdpost_php_development_client_secret
